Feat: agregando nuevo contenido

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/multi/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">   
@@ -19,7 +20,7 @@
 
         <ul>
             <a href="/pages/catalogo.html"><li>Catalogo</li></a>
-            <li>Sobre Nosotros</li>
+            <a href="/pages/about.html"><li>Sobre Nosotros</li></a>
             <li>Envios</li>
             <li>Novedades</li>
         </ul>
@@ -29,7 +30,7 @@
         <div class="hero-content">
             <h1>Velocidad, Pasión, Estilo.</h1>
             <p>Descubrí la mejor indumentaria de Fórmula 1 en DRS Store.</p>
-            <a href="#catalogo" class="btn">Ver Catálogo</a>
+            <a href="/pages/catalogo.html" class="btn">Ver Catálogo</a>
         </div>
     </section>
 
