--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="/multi/favicon.ico" type="image/x-icon">
 
     <!--Bootstrap 5.3v-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -20,11 +21,11 @@
 <body>
     
     <nav class="header">
-        <img src="/multi/Logo.png" alt="Logo DRS">
+        <a href="/index.html"><img src="/multi/Logo.png" alt="Logo DRS"></a>
 
         <ul>
-            <a href="/pages/catalogo.html"><li>Catalogo</li></a>
-            <li>Sobre Nosotros</li>
+            <a href="/index.html"><li>Inicio</li></a>
+            <a href="/pages/about.html"><li>Sobre Nosotros</li></a>
             <li>Envios</li>
             <li>Novedades</li>
         </ul>
