Feat: añadiendo nuevo contenido

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <ul>
             <a href="/pages/catalogo.html"><li>Catalogo</li></a>
             <a href="/pages/about.html"><li>Sobre Nosotros</li></a>
-            <li>Envios</li>
-            <li>Novedades</li>
+            <a href="#"><li>Envios</li></a>
+            <a href="#"><li>Novedades</li></a>
         </ul>
     </nav>
 
