Feat: Terminando el footer y about

--- a/index.html
+++ b/index.html
@@ -55,22 +55,21 @@
     
 
     <section class="beneficios-envios">
-        <h2>Beneficios de Comprar en DRS Store</h2>
         <div class="beneficios">
             <div class="beneficio">
-                <h3>🎉 ¡10% de Descuento en el Primer Mes!</h3>
+                <h3>¡10% de Descuento en el Primer Mes!</h3>
                 <p>Para celebrar nuestro regreso, te damos un 10% de descuento en todas tus compras durante el primer mes. ¡Aprovechalo!</p>
             </div>
             <div class="beneficio">
-                <h3>🚚 Envíos dentro de Córdoba</h3>
+                <h3>Envíos dentro de Córdoba</h3>
                 <p>Envío rápido y seguro dentro de la ciudad de Córdoba por solo $1500. ¡Y si estás fuera de la ciudad, calculamos el costo según Correo Argentino o Andreani!</p>
             </div>
             <div class="beneficio">
-                <h3>🔒 Compra 100% Segura</h3>
+                <h3>Compra 100% Segura con devolución</h3>
                 <p>Tu seguridad es nuestra prioridad. Ofrecemos pagos seguros a través de plataformas confiables y protegemos tus datos personales.</p>
             </div>
             <div class="beneficio">
-                <h3>🕒 Soporte al Cliente 24/7</h3>
+                <h3>Soporte al Cliente 24/7</h3>
                 <p>¿Tenés alguna duda o inconveniente? Nuestro equipo está disponible las 24 horas del día, los 7 días de la semana para ayudarte.</p>
             </div>
         </div>
