--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -68,9 +68,9 @@
     <div class="product-grid">
         <div class="product-card" data-id="1" data-stock="10" data-price="25.99">
             <img src="/multi/Remera FERRARI (Delantera).jpg" alt="Producto 1" class="product-image">
-            <h3 class="product-title">Producto 1</h3>
-            <p class="product-description">Descripción breve del producto 1.</p>
-            <p class="product-price">$25.99</p>
+            <h3 class="product-title">Remera Ferrari </h3>
+            <p class="product-description">100% Algodon + DTF</p>
+            <p class="product-price">$15.200</p>
             <p class="product-stock">Disponibles: <span>10</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
@@ -78,35 +78,35 @@
     
         <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera ASTON MARTIN (Delantera).png" alt="Producto 2" class="product-image">
-            <h3 class="product-title">Producto 2</h3>
-            <p class="product-description">Descripción breve del producto 2.</p>
-            <p class="product-price">$19.99</p>
-            <p class="product-stock">Disponibles: <span>0</span></p>
+            <h3 class="product-title">Remera Aston Martin</h3>
+            <p class="product-description">100% Algodon + DTF</p>
+            <p class="product-price">$15.200</p>
+            <p class="product-stock">Disponibles: <span>5</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
         <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera Alpine (Delantera).jpg" alt="Producto 2" class="product-image">
-            <h3 class="product-title">Producto 2</h3>
-            <p class="product-description">Descripción breve del producto 2.</p>
-            <p class="product-price">$19.99</p>
-            <p class="product-stock">Disponibles: <span>0</span></p>
+            <h3 class="product-title">Remera Alpine</h3>
+            <p class="product-description">100% Algodon + DTF</p>
+            <p class="product-price">$15.200</p>
+            <p class="product-stock">Disponibles: <span>6</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
         <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera WILLIAMS (Delantera).png" alt="Producto 2" class="product-image">
-            <h3 class="product-title">Producto 2</h3>
-            <p class="product-description">Descripción breve del producto 2.</p>
-            <p class="product-price">$19.99</p>
-            <p class="product-stock">Disponibles: <span>0</span></p>
+            <h3 class="product-title">Remera Williams</h3>
+            <p class="product-description">100% Algodon + DTF</p>
+            <p class="product-price">$15.200</p>
+            <p class="product-stock">Disponibles: <span>5</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
         <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera HAAS (Delantera).png" alt="Producto 2" class="product-image">
             <h3 class="product-title">Producto 2</h3>
-            <p class="product-description">Descripción breve del producto 2.</p>
+            <p class="product-description">100% Algodon + DTF</p>
             <p class="product-price">$19.99</p>
             <p class="product-stock">Disponibles: <span>0</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
@@ -115,7 +115,7 @@
         <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera MCLAREN (Delantera) (1).png" alt="Producto 2" class="product-image">
             <h3 class="product-title">Producto 2</h3>
-            <p class="product-description">Descripción breve del producto 2.</p>
+            <p class="product-description">100% Algodon + DTF</p>
             <p class="product-price">$19.99</p>
             <p class="product-stock">Disponibles: <span>0</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
@@ -124,7 +124,7 @@
         <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera MERCEDES (Delantera).png" alt="Producto 2" class="product-image">
             <h3 class="product-title">Producto 2</h3>
-            <p class="product-description">Descripción breve del producto 2.</p>
+            <p class="product-description">100% Algodon + DTF</p>
             <p class="product-price">$19.99</p>
             <p class="product-stock">Disponibles: <span>0</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
@@ -133,7 +133,7 @@
         <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera RED BULL (Delantera).png" alt="Producto 2" class="product-image">
             <h3 class="product-title">Producto 2</h3>
-            <p class="product-description">Descripción breve del producto 2.</p>
+            <p class="product-description">100% Algodon + DTF</p>
             <p class="product-price">$19.99</p>
             <p class="product-stock">Disponibles: <span>0</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
