Agregando contenido a envios

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <ul>
             <a href="/pages/catalogo.html"><li>Catalogo</li></a>
-            <a href="/pages/about.html"><li>Sobre Nosotros</li></a>
-            <a href="#"><li>Envios</li></a>
+            <a href="/pages/about.html"><li>Sobre nosotros</li></a>
+            <a href="/pages/envios.html"><li>Envios</li></a>
             <a href="#"><li>Novedades</li></a>
         </ul>
     </nav>
