--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -26,7 +26,7 @@
         <ul>
             <a href="/index.html"><li>Inicio</li></a>
             <a href="/pages/about.html"><li>Sobre Nosotros</li></a>
-            <li>Envios</li>
+            <a href="/pages/envios.html"></a><li>Envios</li>
             <li>Novedades</li>
         </ul>
     </nav>
