Agregando contenido en envios

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -25,9 +25,9 @@
 
         <ul>
             <a href="/index.html"><li>Inicio</li></a>
-            <a href="/pages/about.html"><li>Sobre Nosotros</li></a>
-            <a href="/pages/envios.html"></a><li>Envios</li>
-            <li>Novedades</li>
+            <a href="about.html"><li>Sobre Nosotros</li></a>
+            <a href="envios.html"><li>Envios</li></a>
+            <a href="#"><li>Novedades</li></a>
         </ul>
     </nav>
 
@@ -105,37 +105,37 @@
 
         <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera HAAS (Delantera).png" alt="Producto 2" class="product-image">
-            <h3 class="product-title">Producto 2</h3>
+            <h3 class="product-title">Remera Haas</h3>
             <p class="product-description">100% Algodon + DTF</p>
-            <p class="product-price">$19.99</p>
-            <p class="product-stock">Disponibles: <span>0</span></p>
+            <p class="product-price">$14.900</p>
+            <p class="product-stock">Disponibles: <span>9</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
         <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera MCLAREN (Delantera) (1).png" alt="Producto 2" class="product-image">
-            <h3 class="product-title">Producto 2</h3>
+            <h3 class="product-title">Remera McLaren</h3>
             <p class="product-description">100% Algodon + DTF</p>
-            <p class="product-price">$19.99</p>
-            <p class="product-stock">Disponibles: <span>0</span></p>
+            <p class="product-price">$15.000</p>
+            <p class="product-stock">Disponibles: <span>4</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
         <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera MERCEDES (Delantera).png" alt="Producto 2" class="product-image">
-            <h3 class="product-title">Producto 2</h3>
+            <h3 class="product-title">Remera Mercedes Benz</h3>
             <p class="product-description">100% Algodon + DTF</p>
-            <p class="product-price">$19.99</p>
-            <p class="product-stock">Disponibles: <span>0</span></p>
+            <p class="product-price">$14.300</p>
+            <p class="product-stock">Disponibles: <span>6</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
         <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera RED BULL (Delantera).png" alt="Producto 2" class="product-image">
-            <h3 class="product-title">Producto 2</h3>
+            <h3 class="product-title">Remera Red Bull</h3>
             <p class="product-description">100% Algodon + DTF</p>
-            <p class="product-price">$19.99</p>
-            <p class="product-stock">Disponibles: <span>0</span></p>
+            <p class="product-price">$15.900</p>
+            <p class="product-stock">Disponibles: <span>7</span></p>
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
     </div>
