--- a/pages/envios.html
+++ b/pages/envios.html
@@ -51,6 +51,13 @@
         </div>
 
     </section>
+
+    <section>
+        <div class="howbuy__main">
+            <h2>¿Cómo comprar?</h2>
+            <p>Para realizar una compra, simplemente selecciona los productos que te interesen y agregalos al carrito. Luego, te llevará a una pagina donde realizar la transferencia o link de pago. Una vez haya impactado te avisaremos cuando enviemos tu produto!</p>
+        </div>
+    </section>
     
 
 
