Feat: Agregando nueva pagina y contenido

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="/pages/catalogo.html"><li>Catalogo</li></a>
             <a href="/pages/about.html"><li>Sobre nosotros</li></a>
             <a href="/pages/envios.html"><li>Envios</li></a>
-            <a href="#"><li>Novedades</li></a>
+            <a href="/pages/novedades.html"><li>Novedades</li></a>
         </ul>
     </nav>
 
