--- a/pages/about.html
+++ b/pages/about.html
@@ -24,10 +24,10 @@
         <a href="/index.html"><img src="/multi/Logo.png" alt="Logo DRS"></a>
 
         <ul>
-            <a href="catalogo.html"><li>Catalogo</li></a>
-            <li>Sobre Nosotros</li>
-            <li>Envios</li>
-            <li>Novedades</li>
+            <a href="/index.html"><li>Inicio</li></a>
+            <a href="about.html"><li>Sobre Nosotros</li></a>
+            <a href="envios.html"><li>Envios</li></a>
+            <a href="novedades.html"><li>Novedades</li></a>
         </ul>
     </nav>
 
