--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -27,7 +27,7 @@
             <a href="/index.html"><li>Inicio</li></a>
             <a href="about.html"><li>Sobre Nosotros</li></a>
             <a href="envios.html"><li>Envios</li></a>
-            <a href="#"><li>Novedades</li></a>
+            <a href="novedades.html"><li>Novedades</li></a>
         </ul>
     </nav>
 
@@ -140,6 +140,34 @@
         </div>
     </div>
 </div><!--END big box-->
+
+<footer class="footer">
+    <div class="footer-container">
+        <!-- 🌍 Ubicación -->
+        <div class="footer-section">
+            <h3>Ubicación</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2863.025285640014!2d-64.18822168196978!3d-31.421563144925077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a285d4a3836d%3A0x238e2b34731fb3fe!2sMontevideo%20157%2C%20X5000AWC%20X5000AWC%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1739286623460!5m2!1ses-419!2sar" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+        <!-- 📞 Contacto -->
+        <div class="footer-section">
+            <h3>Contacto</h3>
+            <p>Email: <a href="mailto:contacto@drsstore.com">contacto@drsstore.com</a></p>
+            <p>Tel: <a href="tel:+549XXXXXXXXX">+54 9 351 7883076</a></p>
+        </div>
+
+        <!-- 🔗 Redes Sociales -->
+        <div class="footer-section">
+            <h3>Síguenos</h3>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/drs.storecba/" target="_blank">Instagram</a>
+                <a href="https://twitter.com/drsstore" target="_blank">X</a>
+                <a href="https://tiktok.com/@drsstore" target="_blank">TikTok</a>
+            </div>
+        </div>
+    </div>
+    <p class="footer-bottom">&copy; 2025 DRS Store - Todos los derechos reservados.</p>
+</footer>
 
 
 
