--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -15,49 +15,29 @@
     <link  href="/css/style.css" rel="stylesheet" type="text/css" >
 
 
-    <title>DRS Store - Envios</title>
+    <title>DRS Store - Novedades</title>
 </head>
 
 <body>
-    
+
     <nav class="header">
         <a href="/index.html"><img src="/multi/Logo.png" alt="Logo DRS"></a>
 
         <ul>
             <a href="/index.html"></a><li>Inicio</li>
             <a href="catalogo.html"><li>Catalogo</li></a>
-            <a href="about.html"><li>Sobre nosotros</li></a>
-            <a href="novedades.html"><li>Novedades</li></a>
+            <a href="about.html"></a><li>Sobre nosotros</li>
+            <a href="envios.html"><li>Envios</li></a>
         </ul>
     </nav>
 
-    <section class="envios__main">
-        <div class="container">
-            <div class="card">
-                <div class="icon">📦</div>
-                <h3>Envíos en Córdoba</h3>
-                <p>Si estás en <strong>Córdoba Capital</strong>, te entrego el pedido personalmente, coordinando el punto de entrega.</p>
-            </div>
-            <div class="card">
-                <div class="icon">🚛</div>
-                <h3>Envíos al interior del país</h3>
-                <p>Si te encuentras en otra provincia de Argentina, el envío se realiza por correo de manera segura.</p>
-            </div>
-            <div class="card">
-                <div class="icon">⏳</div>
-                <h3>Despacho tras finalización</h3>
-                <p>El envío se realizará <strong>una vez que el producto esté terminado</strong>. Te avisaremos cuando esté en camino.</p>
-            </div>
-        </div>
 
+    <section class="novedades__main">
+        <h2 class="novedades__title">Proximamente tendremos novedades para vos...</h2>
+
+        <a href="/index.html"><button class="novedades__btn">Ir a inicio</button></a>
     </section>
 
-    <section>
-        <div class="howbuy__main">
-            <h2>¿Cómo comprar?</h2>
-            <p>Para realizar una compra, simplemente selecciona los productos que te interesen y agregalos al carrito. Luego, te llevará a una pagina donde realizar la transferencia o link de pago. Una vez haya impactado te avisaremos cuando enviemos tu produto!</p>
-        </div>
-    </section>
 
     <footer class="footer">
         <div class="footer-container">
@@ -86,7 +66,6 @@
         </div>
         <p class="footer-bottom">&copy; 2025 DRS Store - Todos los derechos reservados.</p>
     </footer>
-    
 
 
 
@@ -94,5 +73,9 @@
 
 
 
-    </body>
-    </html>
+
+
+
+
+</body>
+</html>
