Finalizando con mas contenido

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -24,9 +24,9 @@
         <a href="/index.html"><img src="/multi/Logo.png" alt="Logo DRS"></a>
 
         <ul>
-            <a href="/index.html"></a><li>Inicio</li>
+            <a href="/index.html"><li>Inicio</li></a>
             <a href="catalogo.html"><li>Catalogo</li></a>
-            <a href="about.html"></a><li>Sobre nosotros</li>
+            <a href="about.html"><li>Sobre nosotros</li></a>
             <a href="envios.html"><li>Envios</li></a>
         </ul>
     </nav>
