Feat: Nueva funcion de filtro en catalogo

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         </div>
     </section>
 
-    <h2 class="title-countdown">GP de Australia en...</h2>
+    <h2 class="title-countdown">GP de Australia  en...</h2>
     <section class="countdown">
+        <img src="/multi/Australia.png" alt="GP de Australia" class="img-countdown">
         <div class="countdown-container">
             <img src="/multi/pngwing.com.png" alt="TAG Heuer" class="logo">
             <img src="/multi/f1logo-removebg-preview.png" alt="F1" class="logo">
