--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -66,7 +66,11 @@
         </div>
 
     <div class="product-grid">
-        <div class="product-card" data-id="1" data-stock="10" data-price="25.99">
+        <div class="no-products-message" style="display: none; text-align: center; margin-top: 20px; font-weight: bold;">
+            Por el momento no hay productos en esta categoría, ¡pronto tendremos novedades!
+        </div>
+
+        <div class="product-card" data-category="Remeras" data-id="1" data-stock="10" data-price="25.99">
             <img src="/multi/Remera FERRARI (Delantera).jpg" alt="Producto 1" class="product-image">
             <h3 class="product-title">Remera Ferrari </h3>
             <p class="product-description">100% Algodon + DTF</p>
@@ -76,7 +80,7 @@
         </div>
     
     
-        <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
+        <div class="product-card" data-category="Remeras" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera ASTON MARTIN (Delantera).png" alt="Producto 2" class="product-image">
             <h3 class="product-title">Remera Aston Martin</h3>
             <p class="product-description">100% Algodon + DTF</p>
@@ -85,7 +89,7 @@
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
-        <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
+        <div class="product-card" data-category="Remeras" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera Alpine (Delantera).jpg" alt="Producto 2" class="product-image">
             <h3 class="product-title">Remera Alpine</h3>
             <p class="product-description">100% Algodon + DTF</p>
@@ -94,7 +98,7 @@
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
-        <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
+        <div class="product-card" data-category="Remeras" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera WILLIAMS (Delantera).png" alt="Producto 2" class="product-image">
             <h3 class="product-title">Remera Williams</h3>
             <p class="product-description">100% Algodon + DTF</p>
@@ -103,7 +107,7 @@
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
-        <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
+        <div class="product-card" data-category="Remeras"  data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera HAAS (Delantera).png" alt="Producto 2" class="product-image">
             <h3 class="product-title">Remera Haas</h3>
             <p class="product-description">100% Algodon + DTF</p>
@@ -112,7 +116,7 @@
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
-        <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
+        <div class="product-card" data-category="Remeras"  data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera MCLAREN (Delantera) (1).png" alt="Producto 2" class="product-image">
             <h3 class="product-title">Remera McLaren</h3>
             <p class="product-description">100% Algodon + DTF</p>
@@ -121,7 +125,7 @@
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
-        <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
+        <div class="product-card" data-category="Remeras" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera MERCEDES (Delantera).png" alt="Producto 2" class="product-image">
             <h3 class="product-title">Remera Mercedes Benz</h3>
             <p class="product-description">100% Algodon + DTF</p>
@@ -130,7 +134,7 @@
             <button class="add-to-cart">Añadir al carrito</button>
         </div>
 
-        <div class="product-card" data-id="2" data-stock="0" data-price="19.99">
+        <div class="product-card" data-category="Remeras" data-id="2" data-stock="0" data-price="19.99">
             <img src="/multi/Remera RED BULL (Delantera).png" alt="Producto 2" class="product-image">
             <h3 class="product-title">Remera Red Bull</h3>
             <p class="product-description">100% Algodon + DTF</p>
@@ -173,6 +177,9 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+
+
+<script src="/js/filtrocat.js"></script>
 <script src="/js/main.js"></script>
 </body>
 </html>
