--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">   
     <link  href="/css/style.css" rel="stylesheet" type="text/css" >
 
+    <script src="https://sdk.mercadopago.com/js/v2"></script> <!-- SDK de Mercado Pago -->
+
+
 
     <title>DRS Store - Inicio</title>
 </head>
