--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -49,6 +49,7 @@
     <div class="offcanvas-body">
         <ul id="cart-items" class="list-group mb-3"></ul> <!-- Lista de productos en el carrito -->
         <h5>Total: <span id="cart-total">$0.00</span></h5>
+        <button id="checkout-btn" class="btn btn-primary w-100 mt-2">Pagar con Mercado Pago</button>
         <button id="clear-cart" class="btn btn-danger w-100 mt-3">Vaciar Carrito</button>
     </div>
 </div>
@@ -183,7 +184,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
-
+<script src="pagos.js"></script>
 <script src="/js/filtrocat.js"></script>
 <script src="/js/main.js"></script>
 </body>
