--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -16,6 +16,9 @@
 
 
     <title>DRS Store - Catalogo completo - 2025</title>
+    
+// SDK MercadoPago.js
+<script src="https://sdk.mercadopago.com/js/v2"></script>
 </head>
 
 <body>
@@ -181,11 +184,16 @@
 
 
 
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
-<script src="pagos.js"></script>
+
+
+<script src="/js/pagos.js"></script>
 <script src="/js/filtrocat.js"></script>
 <script src="/js/main.js"></script>
+
+
 </body>
 </html>
