feat: migrar backend a Vercel serverless

--- a/index.html
+++ b/index.html
@@ -155,5 +155,6 @@
 
     <!-- Scripts -->
     <script src="/js/animations.js"></script>
+    <script src="/js/admin-access.js"></script>
 </body>
 </html>
