--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -180,5 +180,6 @@
     <script src="/js/main.js"></script>
     <script src="/js/pagos.js"></script>
     <script src="/js/animations.js"></script>
+    <script src="/js/admin-access.js"></script>
 </body>
 </html>
