--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -113,5 +113,6 @@
 
     <!-- Scripts -->
     <script src="/js/animations.js"></script>
+    <script src="/js/admin-access.js"></script>
 </body>
 </html>
