--- a/pages/envios.html
+++ b/pages/envios.html
@@ -132,5 +132,6 @@
 
     <!-- Scripts -->
     <script src="/js/animations.js"></script>
+    <script src="/js/admin-access.js"></script>
 </body>
 </html>
